--- a/podcasts/templates/subscriptions.html
+++ b/podcasts/templates/subscriptions.html
@@ -3,7 +3,7 @@
     {% for subscription in results.podcasts %}
       {% with subscription.podcast as podcast %}
         <div class="col-12 dope-result dope-result-l selectable expandable{% if forloop.counter|divisibleby:2 %} color-3{% endif %}" data-podid="{{ podcast.podid }}">
-          <button class="dope-dot exp" data-toggle="collapse" data-target="#{{ results.view }}-collapse{{ forloop.counter }}"
+          <button class="dope-dot exp" data-toggle="collapse" data-target="#more-collapse-{{ results.view }}{{ forloop.counter }}"
             aria-expanded="false" title="Show More">
             <span class="exp-icon exp-nix">
               <i class="fas fa-ellipsis-v"></i>
@@ -77,7 +77,7 @@
                 <i class="fas fa-bars"></i>
               </span>
             </a>
-            <button class="btn-dope exp" data-toggle="collapse" data-target="#{{ results.view }}-collapse{{ forloop.counter }}"
+            <button class="btn-dope exp" data-toggle="collapse" data-target="#more-collapse-{{ results.view }}{{ forloop.counter }}"
               aria-expanded="false" title="Show More">
               <span class="active">
                 More
@@ -87,7 +87,7 @@
               </span>
             </button>
           </div>
-          <div class="collapse fade {{ results.view }}-collapse" id="{{ results.view }}-collapse{{ forloop.counter }}">
+          <div class="collapse fade more-collapse" id="more-collapse-{{ results.view }}{{ forloop.counter }}">
             <ul class="dope-list">
               <li>
                 <span>
