--- a/index/static/style.css
+++ b/index/static/style.css
@@ -389,16 +389,12 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 }
 
 /* SLICK */
-.listen-carousel {
+#listen-carousel {
   display: none;
 }
-.popular-carousel {
+#popular-carousel {
   display: none;
   text-align: center;
-}
-.popular-carousel h1 {
-  font-size: 20px;
-  margin: 25px 0;
 }
 .slick-link {
   margin: 10px;
@@ -407,6 +403,10 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
   border-radius: .25rem;
   color: rgb(46, 46, 46);
   transition: all .25s ease-in-out;
+}
+.slick-link h1 {
+  font-size: 20px;
+  margin: 25px 0;
 }
 .no-touch .slick-link:hover {
   color: #fff;
@@ -422,8 +422,8 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
   -ms-transform: translate(0, -50%);
   transform: translate(0, -50%);
 }
-.popular-carousel .slick-prev,
-.popular-carousel .slick-next {
+#popular-carousel .slick-prev,
+#popular-carousel .slick-next {
   top: -80px;
 }
 .slick-prev {
