--- a/index/templates/splashboard.html
+++ b/index/templates/splashboard.html
@@ -6,10 +6,10 @@
     <div class="collapse fade login-collapse{% if not view %} show{% endif %}" id="splash-collapse">
       <div class="dope-wrapper">
         <h1>
-          Listen
+          Play
         </h1>
-        {% with listen as results %}
-          {% include "listen.min.html" %}
+        {% with play as results %}
+          {% include "play.min.html" %}
         {% endwith %}
       </div>
     </div>
