--- a/index/templates/play.html
+++ b/index/templates/play.html
@@ -37,7 +37,7 @@
     </a>
   </div>
 </div>
-<div id="listen-carousel">
+<div id="play-carousel">
   <div>
     <div class="logo d-none">
       <div class="dope-buttons">
@@ -155,7 +155,7 @@
               <i class="fas fa-bars"></i>
             </span>
           </a>
-          <a class="btn-dope exp" data-toggle="collapse" data-target="#more-collapse-listen{{ forloop.counter }}" aria-expanded="false" title="Show More">
+          <a class="btn-dope exp" data-toggle="collapse" data-target="#more-collapse-play{{ forloop.counter }}" aria-expanded="false" title="Show More">
             <span class="active">
               More
             </span>
@@ -164,7 +164,7 @@
             </span>
           </a>
         </div>
-        <div class="collapse fade more-collapse" id="more-collapse-listen{{ forloop.counter }}">
+        <div class="collapse fade more-collapse" id="more-collapse-play{{ forloop.counter }}">
           <ul class="dope-list">
             <li>
               <span>
