vanillified js (except for collapses & slick)

--- a/index/templates/dopebar.html
+++ b/index/templates/dopebar.html
@@ -72,12 +72,12 @@
               </li>
             {% else %}
               <li>
-                <a class="dope-link login-link" href="/?view=login">
+                <a class="dope-link login-link" href="/?view=login" title="Login">
                   Login
                 </a>
               </li>
               <li>
-                <a class="dope-link signup-link" href="/?view=signup">
+                <a class="dope-link signup-link" href="/?view=signup" title="Signup">
                   Signup
                 </a>
               </li>
@@ -145,12 +145,12 @@
         </form>
       </li>
       <li>
-        <a class="dope-link login-link" href="/?view=login">
+        <a class="dope-link login-link" href="/?view=login" title="Login">
           Login
         </a>
       </li>
       <li>
-        <a class="dope-link signup-link" href="/?view=signup">
+        <a class="dope-link signup-link" href="/?view=signup" title="Signup">
           Signup
         </a>
       </li>
