--- a/index/templates/errors.html
+++ b/index/templates/errors.html
@@ -1,6 +1,6 @@
-<div class="row">
+<div id="errors" class="row">
   <div class="col-12 px-0">
-    <div class="dope-buttons errors color-1">
+    <div class="dope-buttons color-1">
       {% for k, v in errors.items %}
         <p>
           {{ v }}
