--- a/index/templates/splashboard.html
+++ b/index/templates/splashboard.html
@@ -142,7 +142,7 @@
           <br />
           Subscribe to your favorite podcasts.
           <br />
-          Create a personal playlist.
+          Create your personal playlist.
         </p>
         <div class="dope-buttons">
           <a class="btn-dope login-link" href="/?view=login" data-target="#login-collapse" data-toggle="collapse" aria-expanded="{% if view == 'login' %}true{% else %}false{% endif %}"
