--- a/index/templates/button-loading.html
+++ b/index/templates/button-loading.html
@@ -1,4 +1,4 @@
-<div class="button-loading active">
+<div id="button-loading" class="active">
   <span class="loading-a loading-a-1">&#9679;</span>
   <span class="loading-b loading-b-1">d</span>
   <span class="loading-a loading-a-2">&#9679;</span>
