--- a/index/templates/popular.html
+++ b/index/templates/popular.html
@@ -5,73 +5,76 @@
   <div class="col-12 px-0">
     <div id="popular-carousel">
       {% with results.genres as genres %}
-        {% for genre in genres %}
-          <div>
-            <a class="slick-link color-1 browse-link" href="/search/?genre={{ genre.genre.url_format }}&view=grid">
+      {% for genre in genres %}
+      <div>
+        <a class="slick-link color-1 browse-link" href="/search/?genre={{ genre.genre.url_format }}&view=grid">
+          <h1>
+            {{ genre.genre }}
+          </h1>
+        </a>
+        <div class="dope-results">
+          {% for podcast in genre.podcasts %}
+          <div class="col-4 col-lg-2 dope-result">
+            <a class="showpod-link" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}">
+              <img class="img-fluid" data-lazy="//{{ podcast.artworkUrl }}150x150bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.artworkUrl }}150x150bb.jpg'"
+                width="auto" height="auto" title="{{ podcast.title }}" alt="Podcast artwork" />
               <h1>
-                {{ genre.genre }}
+                {{ podcast.title }}
               </h1>
-            </a>
-            <div class="dope-results">
-              {% for podcast in genre.podcasts %}
-                <div class="col-4 col-lg-2 dope-result">
-                  <a class="showpod-link" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}">
-                    <img class="img-fluid" data-lazy="//{{ podcast.artworkUrl }}150x150bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.artworkUrl }}150x150bb.jpg'" width="auto" height="auto" title="{{ podcast.title }}" alt="Podcast artwork" />
-                    <h1>
-                      {{ podcast.title }}
-                    </h1>
-                    <h2>
-                      <span class="by">
-                        by
-                      </span>
-                      {{ podcast.artist }}
-                    </h2>
-                  </a>
-                </div>
-              {% endfor %}
-            </div>
-            <a class="slick-link color-1 browse-link" href="/search/?genre={{ genre.genre.url_format }}&view=grid">
-              <p>
-                See {% if genre.genre.n_podcasts > 1 %} all {% endif %} {{ genre.genre.n_podcasts }} podcast{{ genre.genre.n_podcasts|pluralize }}
-              </p>
+              <h2>
+                <span class="by">
+                  by
+                </span>
+                {{ podcast.artist }}
+              </h2>
             </a>
           </div>
-        {% endfor %}      
+          {% endfor %}
+        </div>
+        <a class="slick-link color-1 browse-link" href="/search/?genre={{ genre.genre.url_format }}&view=grid">
+          <p>
+            See {% if genre.genre.n_podcasts > 1 %} all {% endif %} {{ genre.genre.n_podcasts }} podcast{{
+            genre.genre.n_podcasts|pluralize }} about {{ genre.genre }}
+          </p>
+        </a>
+      </div>
+      {% endfor %}
       {% endwith%}
       {% with results.languages as languages %}
-        {% for language in languages %}
-          <div>
-            <a class="slick-link color-1 browse-link" href="/search/?language={{ language.language.url_format }}&view=grid">
+      {% for language in languages %}
+      <div>
+        <a class="slick-link color-1 browse-link" href="/search/?language={{ language.language.url_format }}&view=grid">
+          <h1>
+            {{ language.language }}
+          </h1>
+        </a>
+        <div class="dope-results">
+          {% for podcast in language.podcasts %}
+          <div class="col-4 col-lg-2 dope-result">
+            <a class="showpod-link" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}">
+              <img class="img-fluid" data-lazy="//{{ podcast.artworkUrl }}150x150bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.artworkUrl }}150x150bb.jpg'"
+                width="auto" height="auto" title="{{ podcast.title }}" alt="Podcast artwork" />
               <h1>
-                {{ language.language }}
+                {{ podcast.title }}
               </h1>
-            </a>
-            <div class="dope-results">
-              {% for podcast in language.podcasts %}
-              <div class="col-4 col-lg-2 dope-result">
-                <a class="showpod-link" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}">
-                  <img class="img-fluid" data-lazy="//{{ podcast.artworkUrl }}150x150bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.artworkUrl }}150x150bb.jpg'" width="auto" height="auto" title="{{ podcast.title }}" alt="Podcast artwork" />
-                  <h1>
-                    {{ podcast.title }}
-                  </h1>
-                  <h2>
-                    <span class="by">
-                      by
-                    </span>
-                    {{ podcast.artist }}
-                  </h2>
-                </a>
-              </div>
-              {% endfor %}
-            </div>
-            <a class="slick-link color-1 browse-link" href="/search/?language={{ language.language.url_format }}&view=grid">
-              <p>
-                See {% if language.language.n_podcasts > 1 %} all {% endif %} {{ language.language.n_podcasts }} podcast{{
-                language.language.n_podcasts|pluralize }}
-              </p>
+              <h2>
+                <span class="by">
+                  by
+                </span>
+                {{ podcast.artist }}
+              </h2>
             </a>
           </div>
-        {% endfor %}
+          {% endfor %}
+        </div>
+        <a class="slick-link color-1 browse-link" href="/search/?language={{ language.language.url_format }}&view=grid">
+          <p>
+            See {% if language.language.n_podcasts > 1 %} all {% endif %} {{ language.language.n_podcasts }} podcast{{
+            language.language.n_podcasts|pluralize }} in {{ language.language }}
+          </p>
+        </a>
+      </div>
+      {% endfor %}
       {% endwith%}
     </div>
   </div>
