--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -1,6 +1,6 @@
 <div class="container position-relative">
-  <div class="col-12 col-lg-4 color-1" id="player-wrapper"{% if user.is_authenticated %} data-auth="true"{% endif %}>
-    <div class="player-content">
+  <div class="col-12 col-lg-4 color-1" id="player-wrapper" data-title="Now playing: {{ episode.podcast.title }} - {{ episode.title }} | dopepod">
+    <div id="player-content">
       <div class="collapse fade confirm-collapse color-1" id="confirm-collapse-player">
         <div class="dope-buttons pt-0">
           <p>
@@ -76,7 +76,7 @@
           <i class="fas fa-ellipsis-v"></i>
         </span>
       </button>        
-      <audio class="audio" onended="playNext()" controls preload="metadata" autoplay>
+      <audio id="audio" onended="playNext()" controls preload="metadata" autoplay>
         <source src="{{ episode.url }}"/>
       </audio>        
     </div>
