--- a/podcasts/templates/results-options.html
+++ b/podcasts/templates/results-options.html
@@ -213,7 +213,7 @@
                 {% if results.provider == "dopepod" %}
                 dopepod
                 {% elif results.provider == "itunes" %}
-                itunes
+                iTunes
                 {% endif %}
               </span>
             </a>
@@ -396,9 +396,9 @@
                     dopepod
                   </span>
                 </button>
-                <a class="btn-dope options-button" href="{{ results.provider_url }}" title="itunes">
+                <a class="btn-dope options-button" href="{{ results.provider_url }}" title="iTunes">
                   <span>
-                    itunes
+                    iTunes
                   </span>
                 </a>
               {% else %}
@@ -407,9 +407,9 @@
                     dopepod
                   </span>
                 </a>
-                <button class="btn-dope" title="itunes">
+                <button class="btn-dope" title="iTunes">
                   <span class="active">
-                    itunes
+                    iTunes
                   </span>
                 </button>
               {% endif %}
