--- a/index/templates/dopebar.html
+++ b/index/templates/dopebar.html
@@ -30,12 +30,12 @@
               </li>
             {% endif %}
             <li>
-              <a class="dope-link select-theme" href="#">
+              <button class="dope-link select-theme" type="button">
                 <i class="fas fa-sun fa-lg" title="Select Theme"></i>
-              </a>
+              </button>
             </li>
           </ul>
-          <button class="dope-link d-none" id="scroll-up" title="Scroll Up">
+          <button class="dope-link d-none" type="button" id="scroll-up" title="Scroll Up">
             <i class="fas fa-angle-up fa-lg"></i>
           </button>
         </div>
@@ -57,7 +57,7 @@
               <i class="fas fa-sign-in-alt"></i>
             </a>
           {% endif %}
-          <button class="dope-link select-theme d-lg-none" title="Select Theme">
+          <button class="dope-link select-theme d-lg-none" type="button" title="Select Theme">
             <i class="fas fa-sun fa-lg"></i>
           </button>
           <ul class="d-none d-lg-inline-block">
@@ -72,12 +72,12 @@
               </li>
             {% else %}
               <li>
-                <a class="dope-link login-link" href="/?view=login" title="Login">
+                <a class="dope-link login-link" href="/?view=login">
                   Login
                 </a>
               </li>
               <li>
-                <a class="dope-link signup-link" href="/?view=signup" title="Signup">
+                <a class="dope-link signup-link" href="/?view=signup">
                   Signup
                 </a>
               </li>
@@ -102,25 +102,25 @@
       </a>
     </li>
     <li>
-      <a class="dope-link charts-link" href="#">
+      <button class="dope-link charts-link" type="button">
         Charts
-      </a>
+      </button>
     </li>
     <li>
-      <a class="dope-link previous-link" href="#">
+      <button class="dope-link previous-link" type="button">
         Previous
-      </a>
+      </button>
     </li>
     {% if user.is_authenticated %}
     <li>
-      <a class="dope-link subscriptions-link" href="{% url 'subscriptions' %}">
+      <button class="dope-link subscriptions-link" type="button">
         Subscriptions
-      </a>
+      </button>
     </li>
     <li>
-      <a class="dope-link playlist-link" href="{% url 'playlist' %}">
+      <button class="dope-link playlist-link" type="button">
         Playlist
-      </a>
+      </button>
     </li>
     <li>
       <a class="dope-link settings-link" href="{% url 'settings' %}">
@@ -145,12 +145,12 @@
         </form>
       </li>
       <li>
-        <a class="dope-link login-link" href="/?view=login" title="Login">
+        <a class="dope-link login-link" href="/?view=login">
           Login
         </a>
       </li>
       <li>
-        <a class="dope-link signup-link" href="/?view=signup" title="Signup">
+        <a class="dope-link signup-link" href="/?view=signup">
           Signup
         </a>
       </li>
