--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -23,7 +23,7 @@
           onerror="this.src='//dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg'" title="{{ episode.podcast.title }}"
           width="auto" height="auto" alt="Podcast artwork" />
       </a>
-      <div class="dope-buttons dope-buttons-r p-0 float-right">
+      <div class="dope-buttons dope-buttons-r dope-buttons-shorty p-0 float-right">
         <button class="btn-dope player-minimize" aria-expanded="true" title="Minimize">
           <span class="exp-icon exp-minus exp-nix">
             <i class="fas fa-plus"></i>
