modify piwik setup, add tests, update requirements.txt

--- a/podcasts/templates/cookie_banner.html
+++ b/podcasts/templates/cookie_banner.html
@@ -1,11 +1,11 @@
 <div class="cookie-wrapper color-1">
   <div class="dope-wrapper">
-    <button onClick="this.parentNode.parentNode.removeChild(this.parentNode);" class="btn-dope float-left" title="Accept">
+    <button onClick="this.parentNode.parentNode.removeChild(this.parentNode);giveConsent();" class="btn-dope float-left" title="Accept">
       <span>
         <i class="fas fa-check"></i>
       </span>
     </button>
-    <button onClick="this.parentNode.parentNode.removeChild(this.parentNode);" class="btn-dope float-right" title="Don't Accept">
+    <button onClick="this.parentNode.parentNode.removeChild(this.parentNode);denyConsent();" class="btn-dope float-right" title="Don't Accept">
       <span>
         <i class="fas fa-times"></i>
       </span>
