--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -9,7 +9,7 @@
   <meta name="google-site-verification" content="C_pKaDqcaoXRjIhDwecTsDw_eqBTcbuJkkWyxuOvINI" />
   <meta name="viewport" content="width=device-width, initial-scale=1,
     shrink-to-fit=no" />
-  <meta name="theme-color" content="#00bfa5">
+  <meta name="theme-color" content="#00bfa5" />
   <meta property="og:title" content="dopepod" />
   {% if results.view == 'showpod' %}
     <meta property="og:image" content="https://{{ results.podcast.artworkUrl }}600x600bb.jpg" />
@@ -40,7 +40,6 @@
   <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.8.8/tiny-slider.css">
   <link rel="stylesheet" href="{% static 'style.min.css' %}" />
 </head>
 <body class="{% if user.profile.theme %}{{ user.profile.theme }}{% else %}light{% endif %}">
@@ -126,6 +125,9 @@
   <script >
     var _paq = _paq || [];
     _paq.push(["trackPageView"]);
+    // accurately measure the time spent on the last pageview of a visit
+    _paq.push(["enableHeartBeatTimer"]);
+    _paq.push(["trackAllContentImpressions"]);
     _paq.push(["enableLinkTracking"]);
     (function () {
       var u = "//em.dopepod.me/";
