--- a/index/templates/search-form.html
+++ b/index/templates/search-form.html
@@ -5,4 +5,6 @@
   <button class="search-button" type="submit" title="Search">
     <i class="fas fa-search"></i>
   </button>
+  <div class="autocomplete">
+  </div>
 </form>
