--- a/index/templates/footer.html
+++ b/index/templates/footer.html
@@ -56,7 +56,7 @@
       </p>
       <ul>
         <li>
-          <a class="dope-link index-link" href="/">
+          <a class="dope-link index-link" href="{% url 'index' %}">
             dopepod © 2018
           </a>
         </li>
