--- a/index/templates/password_reset.html
+++ b/index/templates/password_reset.html
@@ -2,7 +2,7 @@
   <div class="col-12 col-lg-4 dope-wrapper">
     <p>Your password is now changed.</p>
     <p>
-      <a class="login-link" href="/?view=login">
+      <a class="login-link" href="{% url 'login' %}">
         Login
       </a>
     </p>        
