--- a/index/templates/reset_password.html
+++ b/index/templates/reset_password.html
@@ -2,14 +2,10 @@
   <div class="col-12 dope-wrapper">
     {% if errors.general %}
       <p>The password reset link was invalid, possibly because it has already been used. Please request a new
-        <a class="password-link" href="/?view=password">password reset</a>.
+        <a class="password-link" href="{% url 'forgot_password' %}">password reset</a>.
       </p>
     {% else %}
-      {% if errors %}
-        <div class="errors">
-          {% include "errors.min.html" %}
-        </div>
-      {% endif %}
+      {% include "errors.min.html" %}
       <p>
         Please enter a new password.
       </p>
