--- a/index/templates/social-login.html
+++ b/index/templates/social-login.html
@@ -1,5 +1,5 @@
 <div class="dope-buttons">
-<a class="btn-dope" href="/account/google/login/?process=login" title="Sign in with Google">
+<a class="btn-dope" href="/account/google/login/?process=login">
     <span class="active">
       Sign in with Google
     </span>
@@ -7,7 +7,7 @@
       <i class="fab fa-google"></i>
     </span>
   </a>
-  <a class="btn-dope" href="/account/facebook/login/?process=login" title="Sign in with Facebook">
+  <a class="btn-dope" href="/account/facebook/login/?process=login">
     <span class="active">
       Sign in with Facebook
     </span>
