--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -1,9 +1,7 @@
-<div class="col-12 px-0">
-  <div class="results-bar color-3">
-    <h1>
-      Episodes
-    </h1>
-  </div>
+<div class="col-12 results-bar color-3">
+  <h1>
+    Episodes
+  </h1>
 </div>
 {% include "pagination.min.html" %}
 {% include "episodes-table.min.html" %}
