--- a/podcasts/templates/reviews.min.html
+++ b/podcasts/templates/reviews.min.html
@@ -1,1 +1,1 @@
-<div class="col-12 px-0"><div class="results-bar color-3"><h1>Reviews</h1></div><div class="dope-wrapper"><p>Coming soon!</p></div></div>
+<div class="col-12 results-bar color-3"><h1>Reviews</h1></div><div class="col-12 px-0 dope-wrapper"><p>Coming soon!</p></div>
