--- a/index/templates/confirm_email.html
+++ b/index/templates/confirm_email.html
@@ -2,7 +2,7 @@
   <div class="col-12 dope-wrapper">
     <p>Your email is now confirmed.</p>
     <p>
-      <a class="login-link" href="/?view=login">
+      <a class="login-link" href="{% url 'login' %}">
         Login
       </a>
     </p>
