--- a/index/templates/errors.html
+++ b/index/templates/errors.html
@@ -1,27 +1,31 @@
-<div id="errors" class="row">
-  <div class="col-12 px-0">
-    <div class="dope-buttons color-1">
+{% if errors or message %}
+  <div class="row" id="errors">
+    <div class="col-12 px-0">
       {% for k, v in errors.items %}
-        <p>
-          {{ v }}
-        </p>
-        <button class="btn-dope" title="OK">
-          <span>
-            <i class="fas fa-times"></i>
-          </span>
-        </button>
+        <div class="dope-buttons color-1">
+          <p>
+            {{ v }}
+          </p>
+          <button class="btn-dope" title="OK">
+            <span>
+              <i class="fas fa-times"></i>
+            </span>
+          </button>
+        </div>
       {% endfor %}
-      
+        
       {% if message %}
-        <p>
-          {{ message }}
-        </p>
-        <button class="btn-dope" title="OK">
-          <span>
-            <i class="fas fa-times"></i>
-          </span>
-        </button>
+        <div class="dope-buttons color-1">
+          <p>
+            {{ message }}
+          </p>
+          <button class="btn-dope" title="OK">
+            <span>
+              <i class="fas fa-times"></i>
+            </span>
+          </button>
+        </div>
       {% endif %}
     </div>
   </div>
-</div>
+{% endif %}
