--- a/index/templates/terms.html
+++ b/index/templates/terms.html
@@ -24,9 +24,9 @@
       use subject to restrictions set in these terms and conditions.</p>
     <p>You must not:</p>
     <ul>
-      <li>Republish material from <a class="index-link" href="/">dopepod.me</a></li>
-      <li>Sell, rent or sub-license material from <a class="index-link" href="/">dopepod.me</a></li>
-      <li>Reproduce, duplicate or copy material from <a class="index-link" href="/">dopepod.me</a></li>
+      <li>Republish material from <a class="index-link" href="{% url 'index' %}">dopepod.me</a></li>
+      <li>Sell, rent or sub-license material from <a class="index-link" href="{% url 'index' %}">dopepod.me</a></li>
+      <li>Reproduce, duplicate or copy material from <a class="index-link" href="{% url 'index' %}">dopepod.me</a></li>
     </ul>
     <p>Redistribute content from dopepod (unless content is specifically made for redistribution).</p>
     <strong>Hyperlinking to our Content</strong>
